Fix: Editor flickers when trying to drag in new container into a nested structure [ED-5424]

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -71,14 +71,20 @@
 		pointer-events: none; // Prevent the placeholder from blocking the drop area.
 	}
 
-	&.e-container--placeholder-row > .elementor-widget-placeholder {
-		position: relative;
-		width: var( --size );
-		// To make sure that it doesn't push & break the layout when appearing.
-		margin-inline-start: var( --margin-start );
-		height: auto;
-		min-height: 100%;
-		animation-name: dnd-placeholder-widget-vertical;
+	&.e-container--placeholder-row {
+		& > .elementor-widget-placeholder {
+			position: relative;
+			width: var( --size );
+			// To make sure that it doesn't push & break the layout when appearing.
+			margin-inline-start: var( --margin-start );
+			height: auto;
+			min-height: 100%;
+			animation-name: dnd-placeholder-widget-vertical;
+		}
+
+		&[data-nesting-level]:not( [data-nesting-level = "0"] ) > .elementor-widget-placeholder {
+			margin-inline-end: var( --margin-end );
+		}
 	}
 
 	&:not( .e-container--placeholder-row ) > .elementor-widget-placeholder {
